tasks now have input